name:                haskell-todomvc-frontend
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/adarqui/haskell-todomvc-frontend#readme
license:             BSD3
license-file:        LICENSE
author:              Andrew Darqui
maintainer:          andrew.darqui@gmail.com
copyright:           2016 Andrew Darqui
category:            Development
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Web.TodoMVC.Frontend.ReactFlux
                       Web.TodoMVC.Frontend.ReactFlux.Main
                       Web.TodoMVC.Frontend.ReactFlux.TodoComponent
                       Web.TodoMVC.Frontend.ReactFlux.TodoDispatcher
                       Web.TodoMVC.Frontend.ReactFlux.TodoStore
                       Web.TodoMVC.Frontend.ReactFlux.TodoView
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , deepseq
                     , haskell-todomvc-backend
                     , react-flux == 1.1.1
                     , react-flux-router
                     , text
                     , transformers
  if impl(ghcjs)
    build-depends:     ghcjs-base
  ghc-options:         -Wall
  default-language:    Haskell2010

executable haskell-todomvc-frontend-reactflux
  hs-source-dirs:      app/react-flux
  main-is:             Main.hs
  ghc-options:         -Wall -Werror -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , haskell-todomvc-frontend
  if impl(ghcjs)
     build-depends:    ghcjs-base
  default-language:    Haskell2010

test-suite haskell-todomvc-frontend-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haskell-todomvc-frontend
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/adarqui/haskell-todomvc-frontend
